--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,16 @@ name: CI
 # Controls when the workflow will run
 on:
   workflow_dispatch:
+    inputs:
+      name:
+        type: choice
+        description: Who to greet
+        options: 
+        - test
+        - prod
+  
+env:
+  CANCEL: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -12,11 +22,11 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.inputs.name }} == 'test'
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps:    
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Run a one-line script 
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
@@ -24,3 +34,18 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  build2:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.name }} == 'prod'
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:    
+      # Runs a single command using the runners shell
+      - name: Run a one-line script 
+        run: echo teste
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo add here
+          echo new teste
