--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
     steps:    
       # Runs a single command using the runners shell
       - name: Run a one-line script 
-        if: $CANCEL == true
+        if: ${{ github.event.inputs.name == 'test'}}
         run: echo Test
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        if: $CANCEL == false
+        if: ${{ github.event.inputs.name == 'prod'}}
         run: |
           echo Prod 
