--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,13 @@ jobs:
     runs-on: ubuntu-latest  
     steps:    
       # Runs a single command using the runners shell
-      - name: Run a one-line script 
-        if: ${{ github.event.inputs.name != 'test'}}
-        run: echo Test
+      - name: teste
+        if: ${{ github.event.inputs.name == 'test'}}
+        uses: ./.github/test/action.yaml
+        
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        if: ${{ github.event.inputs.name != 'prod'}}
+        if: ${{ github.event.inputs.name == 'prod'}}
         run: |
           echo Prod 
