--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: teste
         if: ${{ github.event.inputs.name == 'test'}}
-        uses: ./.github/test/action
+        uses: ./.github/test
         
 
       # Runs a set of commands using the runners shell
