--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest  
     steps:    
+      - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: teste
         if: ${{ github.event.inputs.name == 'test'}}
